--- a/Roomie/Roomie/Info.plist
+++ b/Roomie/Roomie/Info.plist
@@ -32,5 +32,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>OptimusPrincepsSemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
